# JournalFolder

./: .clang-format  .clang-tidy  CMakeLists.txt  Journal.txt  Readme.md  Start.sh  install.sh
cmake/: CompileOptions.cmake
include/Check/: CheckFile.hpp
src/: CMakeLists.txt
src/Check/: CMakeLists.txt  CheckFile.cpp
src/WatcherCli/: CMakeLists.txt  main.cpp
